--- a/views/index.phtml
+++ b/views/index.phtml
@@ -128,6 +128,7 @@
 											</ul>
 										</li>
 										<li><a href="our-story.html">Our Story</a></li>
+
 										<li class="menu-item-has-children noo_megamenu mega-col-columns-4">
 											<a href="shop.html">Shop</a>
 											<ul class="sub-menu">
@@ -259,6 +260,9 @@
 											</ul>
 										</li>
 										<li><a href="contact.html">Contact</a></li>
+										<li><a class="btn-search noo-search" href="#"><i class="fa fa-search"></i> Search</a>
+									
+										</li>
 									</ul>
 								</nav>
 							</div>
